# oczor

./: .gitignore  .travis.yml  HLint.hs  LICENSE  README.md  oczor.cabal  stack.yaml
libs/std/: arrays.el  arrays.js  arrays.lua  arrays.oc  arrays.rb  eithers.oc  ff.el  ff.js  ff.lua  ff.oc  ff.pre.el  ff.pre.js  ff.pre.lua  ff.pre.rb  ff.rb  foldable.oc  lists.oc  maybes.oc  numbers.oc  prelude.oc  std.oc
occ/: Main.hs
src/Oczor/: Utl.hs  Version.hs
src/Oczor/CodeGen/: CodeGenElisp.hs  CodeGenJs.hs  CodeGenLua.hs  CodeGenRuby.hs  Utl.hs
src/Oczor/Compiler/: CommandLine.hs  Compiler.hs  Files.hs  State.hs  Utl.hs
test/: Spec.hs
tests/codegen/: 01 access.txt  02 array.txt  03 class eq.txt  04 classes.txt  05 class show41.txt  06 classes2.txt  07 classes3.txt  08 function.txt  09 lit.txt  10 match.txt  11 maybe.txt  12 record.txt  13 test.txt  14 typechange.txt  15 types.txt
tests/compiler/: testModule.oc  test_array.oc  test_code.oc  test_either.oc  test_empty.oc  test_foldable.oc  test_import.oc  test_importDir.oc  test_list.oc  test_maybe.oc  test_numbers.oc  test_prelude.oc  test_syntax.oc  testing.oc  tests.bat  tests2.bat
tests/converter/: 01 lit.txt  02 record.txt  03 removetype.txt  04 open  05 match.txt  06 tuple.txt  07 cases.txt  08 either.txt  09 ffi-class  10 typechange.txt  11 typechange-union.txt  12 lazy.txt  13 union.txt  14 union-maker.txt  15 if.txt  16 set.txt  17 let.txt  18 with.txt  instance  removetype-cases  tuple2
tests/converter-class/: 01 class-body.txt  02 class-show.txt  03 class-call.txt  04 class-show.txt  05 class-show.txt  06 class-show.txt  08 class-show.txt  09 cases-show.txt  10 class-show-foo.txt  11 class-mempty.txt  12 class-eq.txt  12 class-pure  13 class-eq-maybe  13 class-show-maybe.txt  14 class-show6  14 triple.txt  15 class-in-record  15 show-label.txt  16 class-map  16 two-classes.txt  17 label.txt  18 show-rec.txt  19 order  20 params.txt
tests/infer/: 01 let.txt  02 list.txt  03 access.txt  04 array.txt  05 cases show.txt  06 classes.txt  07 class pure.txt  08 class show.txt  09 class show2.txt  10 class show maybe  11 conflict.txt  12 either.txt  13 emptytype.txt  14 fails.txt  15 func.txt  16 generic.txt  17 guard.txt  18 instance typecheck.txt  19 kinds.txt  20 maker.txt  21 match.txt  22 match2.txt  23 maybe.txt  24 none.txt  25 open.txt  26 record.txt  27 recursion.txt  28 two classes.txt  29 typechange.txt  30 typeDesc.txt  31 typerow.txt  32 union.txt  33 union2.txt  34 union3.txt  35 with type.txt  36 lazy.txt  37 with.txt  38 if.txt  39 set.txt  cases match  (+4 more)
tests/inferast/: 1 call.txt  2 call.txt  3 class show.txt  4 lit.txt  5 cases show.txt  6 typechange.txt
tests/parser/: 01 ident.txt  02 lit.txt  03 array.txt  04 ffi.txt  05 func.txt  06 anonfunc.txt  07 call.txt  08 call-op.txt  09 indent.txt  10 label.txt  11 let.txt  12 instance.txt  13 classes.txt  14 monoid.txt  15 import.txt  16 open.txt  17 cases.txt  18 match.txt  19 poly.txt  20 typeapply.txt  21 types.txt  22 withtype.txt  23 emptytype.txt  24 semi  25 operator.txt  26 as.txt  27 destruct.txt  28 partial.txt  29 with.txt  30 if.txt  31 set.txt  32 keyword-multiline.txt  cases-match  label-type
tests/pretty/: 01 record.txt  02 constrain.txt  03 type.txt  04 union.txt  05 sub.txt
tests/rewriter/: 01 eta.txt  02 operator  03 apply.txt  04 instance.txt  05 operators
(+77 files in other folders)
